ElementsLicensing.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elemetnslicensinghttps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: elemetnslicensinghttps
  template:
    metadata:
      labels:
        app: elemetnslicensinghttps
    spec:
      volumes:
      - name: elementshttps-cert        
        secret:
          secretName: elementshttps-cert
          items:
          - key: file
            path: elementshttps.pfx
      containers:
        - image: "elementsappregistry.azurecr.io/elementslicensing:1030-20220403.2"
          imagePullPolicy: IfNotPresent
          name: elemetnslicensinghttps
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - mountPath: /elements/elementshttps-cert
              name: elementshttps-cert
              readOnly: true
      imagePullSecrets:
        - name: elementsappregistry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: elemetnslicensinghttps
spec:
  type: NodePort
  ports:
  - name: http-port
    port: 80
    targetPort: 80
  - name: https-port
    port: 443
    targetPort: 443
  selector:
    app: elemetnslicensinghttps        
---
apiVersion: v1
kind: Service
metadata:
  name: elemetnslicensinghttpslb
spec:
  type: LoadBalancer
  ports:
  - name: http-port
    port: 80
  - name: https-port
    port: 443
  selector:
    app: elemetnslicensinghttps
