ElementsLicensingService.yml
apiVersion: v1
kind: Service
metadata:
  name: elemetnslicensinghttps
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: elemetnslicensinghttps
