KubernetesDemo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetesdemo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubernetesdemo
  template:
    metadata:
      labels:
        app: kubernetesdemo
    spec:
      containers:
        - image: "kubernetesdemo12.azurecr.io/kubernetesdemo:1025-20220401.3"
          imagePullPolicy: IfNotPresent
          name: kubernetesdemo
          ports:
            - containerPort: 80
            - containerPort: 443
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetesdemo
spec:
  type: NodePort
  ports:
  - name: http-port
    port: 80
    targetPort: 80
  - name: https-port
    port: 443
    targetPort: 443
  selector:
    app: kubernetesdemo
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetesdemolb
spec:
  type: LoadBalancer
  ports:
  - name: http-port
    port: 80
  - name: https-port
    port: 443
  selector:
    app: kubernetesdemo
